# obs-audio-streaming-filter

./: .gitignore  .gitmodules  CMakeLists.txt  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/scripts/: .Brewfile  .build.zsh
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1
.github/scripts/utils.zsh/: check_linux  check_macos
.github/workflows/: build-project.yaml
build-aux/: .run-format.zsh
cmake/common/: FindCurlpp.cmake  FindHashlibrary.cmake
cmake/linux/: compilerconfig.cmake
cmake/windows/: compilerconfig.cmake
src/: AudioRecordClient.cpp  AudioRecordClient.hpp  AudioStreamingFilterContext.cpp  AudioStreamingFilterContext.h  AuthClient.cpp  AuthClient.hpp  Base64.hpp  OpusUploader.cpp  OpusUploader.hpp  RecordPathGenerator.hpp  audio-streaming-filter-info.c  audio-streaming-filter.cpp  audio-streaming-filter.h  plugin-main.c
triplets/: universal-osx.cmake
